objects/Connectivity_System_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Connectivity_System__c</fullName>
        <label>Connectivity System</label>
        <referenceTo>Connectivity_System__c</referenceTo>
        <relationshipLabel>Connectivity System Contacts</relationshipLabel>
        <relationshipName>Connectivity_System_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Connectivity System Contacts</relationshipLabel>
        <relationshipName>Connectivity_System_Contacts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PSG_Account_Id__c</fullName>
        <externalId>true</externalId>
        <label>PSG Account Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSG_Contact_Id__c</fullName>
        <externalId>true</externalId>
        <label>PSG Contact Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Connectivity System Contact</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Connectivity System Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Connectivity System Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>